--- a/multivariable_linear_regression.ipynb
+++ b/multivariable_linear_regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOiWwK+rTVv541XGMqK4sPC",
+      "authorship_tag": "ABX9TyMyC8OqC2J74Qa2LNmWx/Z9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1028,16 +1028,17 @@
     {
       "cell_type": "code",
       "source": [
-        "print('R-squared = ', regressor.score(X_train, y_train))"
+        "r_squared_train = r2_score(y_train, y_pred_train)\n",
+        "print('R-squared = ', r_squared_train)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ALyw9z7xqCZD",
-        "outputId": "731ddf4a-60cc-4fcf-aee5-bd47a2027b48"
+        "outputId": "054fea36-7840-4161-9290-df31a16fe659"
       },
-      "execution_count": 32,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -1051,22 +1052,22 @@
     {
       "cell_type": "code",
       "source": [
-        "print('Adjusted R-squared = ', 1 - (1-regressor.score(X_train, y_train))*(len(y_train)-1)/(len(y_train)-X_train.shape[1]-1))"
+        "print('Adjusted R-squared = ', 1 - (1-r_squared_train)*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "nNTtLP_qo1Di",
-        "outputId": "6f34271c-abbc-4cee-bde5-91e8fd2088a9"
+        "id": "y-S6SZWvudzh",
+        "outputId": "9d15810c-3af8-4efd-d226-66399929521b"
       },
-      "execution_count": 30,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Adjusted R-squared =  0.6472710368893906\n"
+            "Adjusted R-squared =  0.646722753616507\n"
           ]
         }
       ]
@@ -1083,16 +1084,17 @@
     {
       "cell_type": "code",
       "source": [
-        "print('R-squared = ', regressor.score(X_test, y_test))"
+        "r_squared_test = r2_score(y_test, y_pred_test)\n",
+        "print('R-squared = ', r2_score(y_test, y_pred_test))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Jxf-lZ2IspSO",
-        "outputId": "43a89640-ed31-496a-9e77-0464af8723d6"
+        "outputId": "eb60ef71-de54-4253-d9de-e1d2991bd798"
       },
-      "execution_count": 41,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -1106,16 +1108,16 @@
     {
       "cell_type": "code",
       "source": [
-        "print('Adjusted R-squared = ', 1 - (1-regressor.score(X_test, y_test))*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1))"
+        "print('Adjusted R-squared = ', 1 - (1-r_squared_test)*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uGh3a9Tvssk4",
-        "outputId": "b844c9d2-a917-4686-8b3a-72ee8167d8b8"
+        "outputId": "20c401e5-1b84-4cbc-920e-4bc45803a543"
       },
-      "execution_count": 40,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -1750,15 +1752,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "zHk3zxC3shbX"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
